[package]
name = "mini_lock"
version = "1.0.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description="A light weight, unfair, FILO, priority inversion safe Mutex"
repository = "github.com/Lochlanna/mini_lock"

keywords = ["mutex", "FILO", "lock-free", "priority-inversion-safe", "threading"]
categories = ["concurrency", "low-level"]

[dependencies]
lock_api = "0.4"